# laba3

./: .gitignore  CMakeLists.txt  README.md
formatter_ex_lib/: formatter_ex.cpp  formatter_ex.h
formatter_lib/: formatter.cpp  formatter.h
hello_world_application/: main.cpp
solver_application/: main.cpp
solver_lib/: solver.cpp  solver.h
